--- a/contents/abstract.tex
+++ b/contents/abstract.tex
@@ -1,4 +1,9 @@
 \begin{abstract}
-    Recent advances in Large Language Models (LLMs) have revealed severe vulnerabilities to adversarial manipulations through carefully crafted prompt injections. While numerous defense techniques—ranging from rule-based filters and regexes to sophisticated alignment strategies—have been proposed, these remain inherently brittle, easily bypassed by adaptive attackers employing obfuscation techniques such as token smuggling, multi-turn injections, or encoding-based attacks. This paper introduces a research initiative aimed at developing self-adaptive prompt injection attacks that dynamically leverage Retrieval-Augmented Generation (RAG) combined with structured graph-based exploration techniques. my proposed approach continuously updates its adversarial strategies by retrieving external attack patterns and historical adversarial examples, systematically exploring a diverse and high-dimensional prompt-space via a graph traversal mechanism. While the project is ongoing, this report details my initial findings, the conceptual design, encountered technical challenges, and preliminary results. I highlight critical trade-offs, including the balance between robustness of the attack mechanism and its computational scalability. my work-in-progress sets a clear research agenda towards more resilient, automated, and adaptive adversarial prompt attacks, anticipating future contributions to rigorous security testing methodologies and ultimately improved model defenses.
-    \end{abstract}
-    
+    Large Language Models (LLMs) have demonstrated vulnerability to prompt injection attacks despite widespread defensive measures. This paper introduces AGART (Adaptive Graph-based Adversarial Red Teaming), a novel framework that dynamically generates and adapts adversarial prompts using a structured graph representation of attack techniques. Unlike previous approaches that treat prompts as isolated entities, AGART encodes semantic relationships between attack strategies, enabling systematic exploration of the attack space. The framework integrates Graph-based Retrieval-Augmented Generation (GraphRAG) to effectively traverse and reason about attack patterns, dynamically adapting strategies based on model responses. Our experimental demonstrates that AGART significantly outperforms gradient-based and genetic algorithm approaches in terms of attack success rates while requiring fewer adaptation steps. Additionally, AGART-generated attacks show higher transferability across models compared to baselines. Through ablation studies, we validate the importance of graph structure and adaptation mechanisms. We conclude with recommendations for robust LLM deployment and discuss responsible disclosure practices.
+\end{abstract}
+
+% Our experimental evaluation across four state-of-the-art LLMs demonstrates that AGART achieves 67-85\% attack success rates, outperforming gradient-based and genetic algorithm approaches by 15-25\% while requiring 40\% fewer adaptation steps. Additionally, AGART-generated attacks show higher transferability across models (43-72\%) compared to baselines. Through ablation studies, we validate the importance of graph structure and adaptation mechanisms. We conclude with recommendations for robust LLM deployment and discuss responsible disclosure practices.
+
+% Our key contributions include a graph-based framework for adaptive prompt injection attacks against state-of-the-art LLM defenses; a comprehensive evaluation across commercial and open-source LLMs demonstrating improved transferability of generated attacks; an open-source implementation and dataset of adversarial prompts for reproducible research; and ethical considerations with responsible disclosure guidelines for secure LLM deployment.
+
+% \textbf{Keywords:} Large Language Models, Prompt Injection, Graph-RAG, Adaptive Attacks, Red Teaming, AI Security
