--- a/contents/conclusion.tex
+++ b/contents/conclusion.tex
@@ -1,23 +1,8 @@
-% Conclusion and Future Work
-\section{Discussion and Future Work}
-
-\subsection{Key Findings}
-Our experimental evaluation of AGART reveals several important insights for LLM security research. The graph-based approach achieves higher success rates compared to baseline methods, demonstrating the value of modeling semantic relationships between attack techniques. Adaptive strategies enable a significant reduction in the number of steps required for successful attacks, highlighting the importance of dynamic adaptation in adversarial contexts. Transferability studies show promising success rates when applying AGART-generated attacks to unseen models, suggesting that the framework identifies fundamental vulnerabilities rather than model-specific weaknesses. Perhaps most importantly, the graph structure provides interpretable attack paths that explain why specific attacks succeed, enabling researchers to develop more targeted defensive measures.
-
-\subsection{Limitations}
+\section{Limitations}
 Despite promising results, AGART has important limitations that inform future research directions. Computational overhead for graph maintenance scales with knowledge base size, potentially limiting real-time applications with very large attack corpora. Attack effectiveness depends on the quality and diversity of historical attack data, making the framework less effective in entirely novel domains. The current implementation has limited coverage of multilingual attack scenarios, presenting challenges for global deployment contexts. Additionally, the approach requires periodic updating to address evolving model defenses, necessitating ongoing maintenance.
 
-\subsection{Future Research Directions}
-Based on our findings and identified limitations, we propose three critical directions for future research:
-
-First, advanced graph representations should be explored, including hierarchical graph structures and dynamic graph evolution mechanisms to better model complex attack relationships and adaptation patterns. Such approaches could help overcome current scalability limitations while enabling more nuanced semantic relationships.
-
-Second, expanding to multimodal attacks represents an important frontier, extending the framework to handle combinations of text, images, audio, and other modalities. As multimodal LLMs become more prevalent, understanding cross-modal attack transfer will be crucial for comprehensive security evaluation.
-
-Third, defensive applications of the framework should be investigated. The same graph-based representation that enables effective attacks could be repurposed to develop more robust defense mechanisms, potentially enabling co-evolutionary approaches where defensive and offensive systems improve together.
-
-\subsection{Broader Impact}
-This research contributes to AI security by providing a systematic methodology for identifying LLM vulnerabilities before deployment in critical applications. By establishing metrics and protocols for evaluating model robustness against adaptive attacks, AGART helps create common standards for safety evaluation. The findings directly inform the development of more resilient safety guardrails by revealing semantic patterns in successful attacks. Perhaps most importantly, the framework encourages responsible testing and disclosure practices within the research community.
+\section{Future Work}
+Based on our findings and identified limitations, we propose three directions for future research. Advanced graph representations should be explored, including hierarchical graph structures and dynamic graph evolution mechanisms to better model complex attack relationships and adaptation patterns, helping overcome current scalability limitations while enabling more nuanced semantic relationships. Additionally, expanding to multimodal attacks represents an important frontier, extending the framework to handle combinations of text, images, audio, and other modalities, as understanding cross-modal attack transfer will be crucial for comprehensive security evaluation of increasingly prevalent multimodal LLMs. Finally, defensive applications of the framework should be investigated, as the same graph-based representation that enables effective attacks could be repurposed to develop more robust defense mechanisms, potentially enabling co-evolutionary approaches where defensive and offensive systems improve together.
 
 \section{Conclusion}
 This paper presents AGART, a novel adaptive framework for LLM security evaluation that leverages graph-based knowledge representation to model semantic relationships between attack strategies. By integrating GraphRAG with adaptive optimization techniques, our approach enables more effective, efficient, and interpretable red-teaming than existing methods. Our evaluation demonstrates AGART's ability to systematically identify model vulnerabilities through structured exploration of the attack space, providing security researchers with valuable insights for developing more robust safety mechanisms. As LLMs continue to be deployed in increasingly sensitive applications, frameworks like AGART that can adapt to evolving defenses will be essential for ensuring these systems remain aligned with human values and resistant to adversarial manipulation. The broader impact of this work extends beyond security testing, potentially informing new approaches to model alignment, interpretability, and robust deployment practices for the next generation of language models. 
